--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   google_sign_in: ^4.1.1
   firebase_auth: ^0.15.3
   modal_progress_hud: ^0.1.3
+  scoped_model: ^1.0.1
+  get_it: ^3.1.0
 
 
 dev_dependencies:
